volumes/example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-volume-types
  labels:
    app: nginx-volume-types
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - mountPath: /cache
      name: cache-volume
  volumes:
  - name: cache-volume
    hostPath:
      path: /tmp # directory location on host
